--- a/app/src/main/res/values/strings-settings.xml
+++ b/app/src/main/res/values/strings-settings.xml
@@ -3,18 +3,19 @@
 
 
     <string name="feedback_email" translatable="false">carcmedev@gmail.com</string>
-    <string name="website" translatable="false">https://carcmedev.github.io/btown/index.html</string>
-    <string name="bugtracker" translatable="false">https://github.com/carcme/btown_mvp/issues</string>
-    <string name="carc_app_base_url" formatted="false">https://play.google.com/store/apps/details?id=me.carc.%s</string>
+    <string name="website" translatable="false">https://carcmedev.github.io/intervaltimer/index.html</string>
+    <string name="bugtracker" translatable="false">https://github.com/carcme/CarcIntervalTimer/issues</string>
+    <string name="carc_app_base_url" translatable="false" formatted="false">https://play.google.com/store/apps/details?id=me.carc.%s</string>
 
     <string name="visit_website">Website</string>
 
-    <string name="about_top">Marc Bampton 2018 ©\nFree Software License: GPLv3</string>
+    <string name="about_top" translatable="false">Marc Bampton 2018 ©\nFree Software License: GPLv3</string>
 
     <string name="about"><![CDATA[
-<p>This timer is the result of many searches to find an interval timer with certain features. None of the other times had all the features I wanted
-or were too complex and did too much! So I decided to create my own and use it to learn a bit more about Android along the way.</p>
+<p>This timer is the result of many searches to find an interval timer with certain features. None of the other timers had all the features I wanted
+or were too complex and tried to do too much! So I decided to create my own and use it to learn a bit more about Android along the way.</p>
 <p>If you have any features you\'d like to see, let me know via the feedback button</p>
+<p>Don\'t forget to try some of my other apps in the Extra tab</p>
 ]]></string>
 
     <string name="about_bottom">
