--- a/app/src/main/res/layout/dialog_rating.xml
+++ b/app/src/main/res/layout/dialog_rating.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            xmlns:tools="http://schemas.android.com/tools">
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -14,11 +15,11 @@
             android:id="@+id/dialog_rating_icon"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:contentDescription="@null"
             android:layout_centerHorizontal="true"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
             android:layout_marginTop="10dp"
+            android:contentDescription="@null"
             tools:src="@mipmap/ic_launcher"/>
 
         <TextView
@@ -31,8 +32,8 @@
             android:layout_marginRight="15dp"
             android:gravity="center"
             android:padding="20dp"
-            android:textSize="20sp"
             android:textColor="@color/black"
+            android:textSize="20sp"
             tools:text="some random text"
             />
 
@@ -47,7 +48,7 @@
             android:numStars="5"
             android:scaleX="0.7"
             android:scaleY="0.7"
-            android:stepSize="1" />
+            android:stepSize="1"/>
 
         <TextView
             android:id="@+id/dialog_rating_feedback_title"
@@ -59,8 +60,8 @@
             android:textColor="@color/black"
             android:textSize="18sp"
             android:visibility="gone"
-            tools:visibility="visible"
-            tools:text="feedback title"/>
+            tools:text="feedback title"
+            tools:visibility="visible"/>
 
         <EditText
             android:id="@+id/dialog_rating_feedback"
@@ -74,8 +75,8 @@
             android:gravity="top"
             android:inputType="textCapSentences|textMultiLine"
             android:padding="10dp"
-            android:textColorHint="@color/md_grey_400"
             android:textColor="@color/black"
+            android:textColorHint="@color/md_grey_400"
             android:visibility="gone"
             tools:text="some random text"
             tools:visibility="visible"/>
@@ -99,8 +100,8 @@
                 android:foreground="?attr/selectableItemBackground"
                 android:gravity="center"
                 android:padding="15dp"
-                android:textSize="15sp"
                 android:textColor="@color/black"
+                android:textSize="15sp"
                 tools:text="feedback cancel"/>
 
             <TextView
@@ -112,8 +113,8 @@
                 android:foreground="?attr/selectableItemBackground"
                 android:gravity="center"
                 android:padding="15dp"
-                android:textSize="15sp"
                 android:textColor="@color/black"
+                android:textSize="15sp"
                 tools:text="feedback submit"/>
 
         </LinearLayout>
@@ -135,8 +136,8 @@
                 android:clickable="true"
                 android:gravity="center"
                 android:padding="15dp"
-                android:textSize="15sp"
                 android:textColor="@color/black"
+                android:textSize="15sp"
                 tools:text="rate Neg"/>
 
             <TextView
@@ -148,8 +149,8 @@
                 android:clickable="true"
                 android:gravity="center"
                 android:padding="15dp"
-                android:textSize="15sp"
                 android:textColor="@color/black"
+                android:textSize="15sp"
                 tools:text="rate Pos"/>
 
         </LinearLayout>
