--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,8 +3,9 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="margin_small">8dp</dimen>
     <dimen name="margin_standard">16dp</dimen>
-    <dimen name="margin_double">24dp</dimen>
+        <dimen name="margin_double">24dp</dimen>
 
     <dimen name="fab_space">72dp</dimen>
 
