Make timer a background service Add landscape layout Add voices Loads more quotes

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,21 +14,18 @@
         android:layout_height="match_parent"
         android:paddingTop="?attr/actionBarSize">
 
-
         <LinearLayout
             android:id="@+id/round_panel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:orientation="vertical"
-            android:padding="6dp">
+            android:orientation="vertical">
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/round"
-                android:textSize="24sp"
-                />
+                android:textSize="24sp"/>
 
             <TextView
                 android:id="@+id/round_number"
@@ -37,79 +34,139 @@
                 android:gravity="center"
                 android:textSize="24sp"
                 tools:text="12/12"/>
+
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
             android:orientation="horizontal"
             android:paddingEnd="@dimen/margin_standard"
             android:paddingStart="@dimen/margin_standard">
-            <!-- TODO Change Font Family for app -->
-            <TextView
-                android:id="@+id/workPreviewText"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                tools:text="Work: 88:88"/>
 
-            <TextView
-                android:id="@+id/restPreviewText"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                tools:text="Rest: 00:33"/>
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/workPreviewText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    tools:text="Work: 88:88"/>
+
+                <TextView
+                    android:id="@+id/workoutTime"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="20sp"
+                    tools:text="Workout Time"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/restPreviewText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end"
+                    tools:text="Rest: 88:88"/>
+
+                <TextView
+                    android:id="@+id/elapsedTime"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end"
+                    android:textSize="20sp"
+                    tools:text="Elapsed Time"/>
+
+            </LinearLayout>
+
         </LinearLayout>
 
-        <LinearLayout
-            android:id="@+id/time_panel"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@+id/round_panel"
-            android:layout_marginBottom="@dimen/fab_space"
-            android:layout_marginEnd="@dimen/margin_standard"
-            android:layout_marginStart="@dimen/margin_standard"
-            android:background="@android:color/transparent"
-            android:orientation="vertical">
-
             <TextView
-                android:id="@+id/elapsedTime"
+                android:id="@+id/timerRemaining"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center|end"
-                android:textSize="20sp"
-                tools:text="Elapsed Time:"/>
-
-            <TextView
-                android:id="@+id/time_left_textView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_below="@+id/round_panel"
                 android:gravity="center_horizontal"
                 android:text="@string/initial_time"
                 android:textColor="#000000"
                 android:textSize="120sp"
                 tools:textColor="#FFF"/>
 
-            <TextView
-                android:id="@+id/timerMessage"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center_horizontal"
-                android:textSize="30sp"
-                android:fontFamily="sans-serif-smallcaps"
-                android:visibility="visible"
-                tools:text="It’s not the will to win that matters, everyone has that. It’s the will to prepare to win that matters"/>
+        <TextView
+            android:id="@+id/timerMessage"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/timerRemaining"
+            android:paddingStart="@dimen/margin_standard"
+            android:paddingEnd="@dimen/margin_standard"
+            android:layout_marginBottom="@dimen/fab_space"
+            android:layout_alignParentBottom="true"
+            android:fontFamily="sans-serif-smallcaps"
+            android:gravity="center_horizontal"
+            android:textSize="30sp"
+            android:visibility="visible"
+            tools:text="It’s not the will to win that matters, everyone has that. It’s the will to prepare to win that matters"/>
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/recyclerView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scrollbars="none"
-                tools:visibility="gone"/>
-
-        </LinearLayout>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/margin_standard"
+            android:layout_below="@id/timerRemaining"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="@dimen/fab_space"
+            android:scrollbars="none"
+            tools:visibility="visible"/>
 
     </RelativeLayout>
+
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fabSettings"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|start"
+        android:layout_margin="@dimen/fab_margin"
+        android:background="?android:attr/selectableItemBackground"
+        app:backgroundTint="@color/colorPrimary"
+        app:srcCompat="@drawable/ic_settings"/>
+
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fabTimer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="16dp"
+        android:background="?android:attr/selectableItemBackground"
+        android:elevation="4dp"
+        android:stateListAnimator="@animator/fab_animation"
+        android:tint="@color/colorAccent"
+        app:backgroundTint="@color/colorPrimary"
+        app:srcCompat="@android:drawable/ic_media_play"/>
+
+
+    <me.carc.intervaltimer.widgets.circle_progress.DonutProgress
+        android:id="@+id/fabDonutProgress"
+        android:layout_width="@dimen/fab_space"
+        android:layout_height="@dimen/fab_space"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/margin_small"
+        app:donut_circle_starting_degree="270"
+        app:donut_finished_color="@color/md_red_700"
+        app:donut_finished_stroke_width="11dp"
+        app:donut_progress="0"
+        app:donut_text=""
+        app:donut_unfinished_color="@android:color/transparent"
+        app:layout_anchorGravity="bottom|end"/>
+
 
     <RelativeLayout
         android:id="@+id/resetLayer"
@@ -137,25 +194,5 @@
             android:text="@string/hold_to_reset"/>
 
     </RelativeLayout>
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fabSettings"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|start"
-        android:layout_margin="@dimen/fab_margin"
-        app:backgroundTint="@color/colorPrimary"
-        app:srcCompat="@drawable/ic_settings"/>
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        android:elevation="4dp"
-        android:tint="@color/colorAccent"
-        app:backgroundTint="@color/colorPrimary"
-        app:srcCompat="@android:drawable/ic_media_play"/>
 
 </android.support.design.widget.CoordinatorLayout>
