--- a/app/src/main/res/layout/history_item.xml
+++ b/app/src/main/res/layout/history_item.xml
@@ -13,14 +13,15 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingStart="@dimen/margin_standard"
+        android:orientation="horizontal"
         android:paddingEnd="@dimen/margin_standard"
-        android:orientation="horizontal">
+        android:paddingStart="@dimen/margin_standard"
+        android:baselineAligned="false">
 
         <LinearLayout
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:orientation="vertical"
             android:padding="5dp">
 
@@ -40,10 +41,10 @@
 
         <LinearLayout
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
+            android:layout_weight="1"
             android:gravity="end"
+            android:orientation="vertical"
             android:padding="5dp">
 
             <TextView
