--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -6,7 +6,8 @@
         <CheckBoxPreference
             android:defaultValue="true"
             android:key="prep_time_key"
-            android:summary="@string/prep_time_summary"
+            android:summaryOn="@string/prep_time_summary"
+            android:summaryOff="@string/prep_time_summary_disabled"
             android:title="@string/prep_time_title"/>
 
         <me.carc.intervaltimer.widgets.PickerPrefDialog
@@ -20,7 +21,7 @@
             android:title="@string/rest_time_title"/>
 
         <ListPreference
-            android:defaultValue="@string/warn_time_values_default"
+            android:defaultValue="3"
             android:entries="@array/warn_time"
             android:entryValues="@array/warn_time_values"
             android:key="warn_time_key"
@@ -37,13 +38,15 @@
         <CheckBoxPreference
             android:defaultValue="true"
             android:key="quotes_key"
-            android:summary="@string/quotes_summary"
+            android:summaryOn="@string/quotes_summary"
+            android:summaryOff="@string/quotes_summary_disabled"
             android:title="@string/quotes_title"/>
 
         <CheckBoxPreference
             android:defaultValue="true"
             android:key="history_key"
-            android:summary="@string/history_summary"
+            android:summaryOff="@string/history_summary_disabled"
+            android:summaryOn="@string/history_summary"
             android:title="@string/history_title"/>
 
     </PreferenceCategory>
@@ -54,25 +57,36 @@
         <CheckBoxPreference
             android:defaultValue="true"
             android:key="keep_awake_key"
-            android:summary="@string/keep_awake_summary"
+            android:summaryOn="@string/keep_awake_summary"
+            android:summaryOff="@string/keep_awake_summary_disbled"
             android:title="@string/keep_awake_title"/>
 
         <CheckBoxPreference
             android:defaultValue="false"
             android:key="proximity_sensor_key"
-            android:summary="@string/proximity_sensor_summary_disabled"
+            android:summaryOn="@string/proximity_sensor_summary"
+            android:summaryOff="@string/proximity_sensor_summary_disabled"
             android:title="@string/proximity_sensor_title"/>
 
         <CheckBoxPreference
-            android:defaultValue="false"
+            android:defaultValue="true"
             android:key="mute_key"
-            android:summary="@string/mute_summary"
+            android:summaryOn="@string/mute_summary_on"
+            android:summaryOff="@string/mute_summary_off"
             android:title="@string/mute_title"/>
+
+        <CheckBoxPreference
+            android:defaultValue="true"
+            android:key="voice_key"
+            android:summaryOn="@string/voice_summary_on"
+            android:summaryOff="@string/voice_summary_off"
+            android:title="@string/voice_title"/>
 
         <CheckBoxPreference
             android:defaultValue="false"
             android:key="use_vibrate_key"
-            android:summary="@string/use_vibrate_summary_disabled"
+            android:summaryOff="@string/use_vibrate_summary_disabled"
+            android:summaryOn="@string/use_vibrate_summary"
             android:title="@string/use_vibrate_title"/>
 
     </PreferenceCategory>
@@ -84,10 +98,6 @@
             android:key="report_bug"
             android:summary="Log an error report on Github"
             android:title="Send Bug to Developer"/>
-
-        <Preference
-            android:key="version"
-            android:title="Version 0.1.1-beta"/>
 
     </PreferenceCategory>
 
